--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -30,10 +30,12 @@ DEPS = $(foreach SHL,$(SHARED_LIBPATHS),$(SHL:%=%/lib/lib$(notdir $(SHL)).so)) \
 	$(foreach STL,$(STATIC_LIBPATHS),$(STL:%=%/lib/lib$(notdir $(STL)).a))
 
 # Set header paths to (-I)nclude
-IDIRS += $(addsuffix /src,$(SHARED_LIBPATHS) $(STATIC_LIBPATHS) .) /usr/local/include
+IDIRS += $(SHARED_LIBPATHS) $(STATIC_LIBPATHS) ./usr/local/include
+
 
 # Set library paths to (-L)ook
 LIBDIRS = $(addsuffix /lib,$(SHARED_LIBPATHS) $(STATIC_LIBPATHS)) /usr/local/lib
+
 
 # Set shared library paths to be found in runtime (-rpath)
 RUNDIRS = $(SHARED_LIBPATHS:%=$(shell pwd)/%/lib)
